switch to jib gradle plugin for docker builds